--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -10,8 +10,16 @@ server {
         index  index.html index.htm;
     }
 
-    location /api {
-        proxy_pass  http://flask:8080/;
+    # location /api {
+    #     proxy_pass  http://flask:8080/;
+    # }
+
+    location /api/ {
+        proxy_pass http://flask:80/;
+        # proxy_redirect off;
+        # proxy_set_header Host $host;
+        # proxy_set_header X-Real-IP $remote_addr;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     #error_page  404              /404.html;
