--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,35 +1,37 @@
+upstream flask {
+    server flask:8080;
+}
+
 server {
     listen       80;
-    listen  [::]:80;
-    server_name  localhost;
+    # listen  [::]:80;
+    # server_name  localhost;
+    server_name 0.0.0.0;
 
     #access_log  /var/log/nginx/host.access.log  main;        
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
-
-    # location /api {
-    #     proxy_pass  http://flask:8080/;
+    # location / {
+    #     root   /usr/share/nginx/html;
+    #     index  index.html index.htm;
     # }
 
-    location /api/ {
-        proxy_pass http://flask:80/;
-        # proxy_redirect off;
-        # proxy_set_header Host $host;
-        # proxy_set_header X-Real-IP $remote_addr;
-        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    location / {
+        # include uwsgi_params;
+        # uwsgi_pass unix:/tmp/uwsgi.sock;
+        proxy_pass  http://flask;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_redirect off;
     }
 
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
     #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
+    # error_page   500 502 503 504  /50x.html;
+    # location = /50x.html {
+    #     root   /usr/share/nginx/html;
+    # }
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
     #
