--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -1,9 +1,13 @@
-FROM python:alpine
+FROM python:3.8
 
 WORKDIR /app
+# ENV FLASK_APP=index
 
-COPY ./app /app
+# COPY ./app /app
 
-RUN pip install Flask
+COPY ./requirements.txt ./
 
-CMD ["python", "index.py"]
+RUN pip install --no-cache-dir --upgrade pip wheel && \
+    pip install --no-cache-dir -r requirements.txt
+
+# CMD ["python", "index.py"]
